feat: /api/v1/seqvars/csq endpoint with OpenAPI (#606) (#614)
