# src/server/run/mod.rs
@@ -16,11 +16,17 @@ pub mod actix_server;
 
 /// Module with OpenAPI documentation.
 pub mod openapi {
+    use crate::annotate::seqvars::ann::{
+        Consequence, FeatureBiotype, FeatureType, Message, Pos, PutativeImpact, Rank, SoFeature,
+    };
     use crate::annotate::strucvars::csq::interface::StrucvarsSvType;
     use crate::annotate::strucvars::csq::{
         StrucvarsGeneTranscriptEffects, StrucvarsTranscriptEffect,
     };
     use crate::common::GenomeRelease;
+    use crate::server::run::actix_server::seqvars_csq::{
+        SeqvarsCsqQuery, SeqvarsCsqResponse, SeqvarsCsqResultEntry,
+    };
     use crate::server::run::actix_server::strucvars_csq::{
         StrucvarsCsqQuery, StrucvarsCsqResponse,
     };
@@ -28,12 +34,16 @@ pub mod openapi {
         Assembly, DataVersionEntry, SoftwareVersions, VersionsInfoResponse,
     };
 
-    use super::actix_server::{strucvars_csq, versions, CustomError};
+    use super::actix_server::{seqvars_csq, strucvars_csq, versions, CustomError};
 
     /// Utoipa-based `OpenAPI` generation helper.
     #[derive(utoipa::OpenApi)]
     #[openapi(
-        paths(versions::handle, strucvars_csq::handle_with_openapi),
+        paths(
+            versions::handle,
+            seqvars_csq::handle_with_openapi,
+            strucvars_csq::handle_with_openapi
+        ),
         components(schemas(
             Assembly,
             CustomError,
@@ -46,6 +56,17 @@ pub mod openapi {
             StrucvarsSvType,
             GenomeRelease,
             StrucvarsTranscriptEffect,
+            SeqvarsCsqQuery,
+            SeqvarsCsqResponse,
+            SeqvarsCsqResultEntry,
+            Consequence,
+            PutativeImpact,
+            FeatureType,
+            FeatureBiotype,
+            Rank,
+            Pos,
+            Message,
+            SoFeature,
         ))
     )]
     pub struct ApiDoc;
